# emulator-stunts

./: .gitignore  .hlint.yaml  README.md  cabal.project  ghc-8.4.4-stack.yaml  stack-lts-14.yaml  stack-lts-15.yaml  stack-lts-16.yaml  stack-lts-18.yaml  stack-nightly.yaml  stack.yaml  stuntsemulator.cabal
.github/workflows/: cabal.yml  format.yml  lint.yml  stack.yml
app/: Main.hs
emulate8086/: CPU.hs  DeBruijn.hs  Dos.hs  Edsl.hs  Emulate.hs  GUI.hs  MachineState.hs  stuntsemulator.cabal
emulate8086/Utils/: Compare.hs  Parse.hs
src/: CPU.hs  DeBruijn.hs  Dos.hs  Edsl.hs  Emulate.hs  GUI.hs  Helper.hs  MachineState.hs
src/Utils/: Compare.hs  Parse.hs
