cabal-version:      2.4
name:               stuntsemulator
version:            0.1
synopsis:
  A revival of the classic game Stunts (8086 CPU and DOS emulation)

category:           Graphics, Game
author:             Péter Diviánszky
maintainer:         divipp@gmail.com
copyright:          (c) 2014-2015, Péter Diviánszky and Csaba Hruska
license:            BSD-3-Clause
license-file:       LICENSE
stability:          experimental
build-type:         Simple
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.3
extra-source-files:
  src/Utils/Compare.hs
  src/Utils/Parse.hs

common common
  build-depends:
    , ALUT        ^>=2.4
    , base        >=4.12 && <4.15
    , bytestring  >=0.10 && <0.12

  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , containers    ^>=0.6
    , deepseq       ^>=1.4
    , directory     ^>=1.3
    , filepath      ^>=1.4
    , GLFW-b        >=3.2  && <3.4
    , Glob          ^>=0.10
    , hdis86
    , lens          >=4.17 && <4.20
    , mtl           ^>=2.2
    , OpenGLRaw     >=3.2  && <3.4
    , transformers  ^>=0.5
    , vector        ^>=0.12

  -- cabal-fmt: expand src -Utils.Compare -Utils.Parse
  exposed-modules:
    CPU
    DeBruijn
    Dos
    Edsl
    Emulate
    GUI
    Helper
    MachineState

executable stuntsemulator
  import:        common
  main-is:       app/Main.hs
  build-depends: stuntsemulator
  ghc-options:   -O2
