cabal-version:      2.4
name:               stuntsemulator
version:            0.1
synopsis:
  A revival of the classic game Stunts (8086 CPU and DOS emulation)

category:           Graphics, Game
author:             Péter Diviánszky
maintainer:         divipp@gmail.com
copyright:          (c) 2014-2015, Péter Diviánszky and Csaba Hruska
license:            BSD-3-Clause
license-file:       LICENSE
stability:          experimental
build-type:         Simple
tested-with:        GHC ==8.6.5 || ==8.8.2
extra-source-files:
  Utils/Compare.hs
  Utils/Parse.hs

executable stuntsemulator
  hs-source-dirs:     .
  main-is:            Main.hs
  build-depends:
    , ALUT          ^>=2.4
    , base          >=4.12 && <4.14
    , bytestring
    , containers
    , deepseq
    , directory
    , filepath
    , GLFW-b        >=3.2  && <3.4
    , Glob          ^>=0.10
    , hdis86
    , lens          >=4.17 && <4.19
    , mtl           ^>=2.2
    , OpenGLRaw     >=3.2  && <3.4
    , transformers
    , vector        ^>=0.12

  other-modules:
    CPU
    DeBruijn
    Dos
    Edsl
    Emulate
    GUI
    Helper
    MachineState

  ghc-options:
    -Wall -fno-warn-type-defaults -fno-warn-missing-signatures
    -fno-warn-incomplete-patterns -fno-warn-unused-matches
    -fno-warn-name-shadowing -rtsopts

  default-extensions:
    NoMonomorphismRestriction
    BangPatterns
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    PatternGuards
    PatternSynonyms
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    TypeFamilies
    ViewPatterns
